@startuml

title __CONTROLLER's Class Diagram__\n

  namespace  java{
    namespace com.slas {
      namespace controller {
        class com.slas.controller.MainController {
            + current_token : String
            - card_no2 : long
            - nopassmsg : String
            + ChangePassword()
            + Login()
            + QR_gen()
            + aexport()
            + deleteLecture()
            + editLecture()
            + export()
            + findDate()
            + insert()
            + logoutUser()
            + mapReapExcelDatatoDB()
            + recv_data()
            + toAbout()
            + toContact()
            + toEdit()
            + toImport()
            + toIndex()
            + toInsert()
            + toPanel()
            + toPwd_change()
            + toShow()
            + toSignup()
            + toView()
            + token()
            + uaa()
        }
        class com.slas.controller.QRController {
                    {static} + QRCODE_ENDPOINT : String
                    {static} + THIRTY_MINUTES : long
                    + deleteAllCachedImages()
                    + getQRCode()
                    + handleRuntimeException()
                    + indexRouter()
                }
                class com.slas.controller.RegController {
                            + register()
                        }
      }
    }
  }





  com.slas.controller.MainController o-- com.slas.repo.LectureSlas : lectureSlas
  com.slas.controller.MainController o-- com.slas.mapper.MainMapper : mainMapper
  com.slas.controller.MainController o-- com.slas.repo.RepoSlas : repoSlas
  com.slas.controller.QRController o-- com.slas.service.ImageService : imageService
  com.slas.controller.RegController o-- com.slas.repo.RepoSlas : repoSlas
  com.slas.repo.RepoSlas o-- com.slas.entity.TeacherAuthEntity
  com.slas.repo.LectureSlas o-- com.slas.entity.LectureEntity
  com.slas.mapper.MainMapper o-- com.slas.entity.TeacherAuthEntity
  com.slas.mapper.MainMapper o-- com.slas.entity.LectureEntity

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
